--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@
 
  .header {
      border-bottom: 1px solid #e7e9fc;
+     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
  }
 
  .header-navigation {
@@ -65,6 +66,7 @@
      letter-spacing: 0.03em;
      text-transform: uppercase;
      margin-right: 76px;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .header-navigation-logo-italic {
@@ -96,7 +98,7 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   display: block;
   width: 100%;
   height: 4px;
@@ -119,6 +121,7 @@
      color: #434455;
      letter-spacing: 0.02em;
      line-height: 1.5;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  }
 
@@ -136,6 +139,7 @@
  /* === HERO === */
 
  .hero-container {
+    max-width: 1440px;
  }
 
  .hero {
@@ -178,6 +182,7 @@
      height: 56px;
      display: block;
      border: none;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  }
 
@@ -201,6 +206,7 @@
   border-radius: 4px;
   margin-bottom: 8px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #8e8f99;
 }
 
 .features__icon {
@@ -271,7 +277,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms ease;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-link:hover,
@@ -314,6 +320,13 @@
      border-radius: 0px 0px 4px 4px;
 
  }
+ .team-member:first-child {
+  box-shadow:
+    0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
  .team-member-info {
      padding: 32px 0;
