--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@
      letter-spacing: 0.02em;
      line-height: 1.5;
      padding: 24px 0;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .header-navigation-list-text:hover {
@@ -139,7 +140,7 @@
  /* === HERO === */
 
  .hero-container {
-    max-width: 1440px;
+    
  }
 
  .hero {
@@ -151,6 +152,7 @@
      background-position: center;
      background-repeat: no-repeat;
      color: #fff;
+     max-width: 1440px;
 
  }
 
