--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@
      background-repeat: no-repeat;
      color: #fff;
      max-width: 1440px;
+        margin: 0 auto;
 
  }
 
@@ -270,6 +271,9 @@
   gap: 24px;
   margin-top: 8px;
 }
+.team-social-item {
+  
+}
 
 .team-social-link {
   width: 40px;
@@ -366,25 +370,34 @@
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  padding-top: 45px;
-  padding-left: 32px;
-  letter-spacing: 0.02em;
-  transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  
+}
+.portfolio-item:hover {
+  box-shadow:
+    0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.image-wrapper:hover .overlay {
+
+.image-wrapper:hover .portfolio-text {
   transform: translateY(0);
 }
 
-
+.portfolio-text{
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
  .portfolio {
@@ -412,6 +425,7 @@
 
  .portfolio-item {
      width: calc((100% - 48px) / 3);
+     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .portfolio-list-one {
