--- a/css/styles.css
+++ b/css/styles.css
@@ -460,13 +460,16 @@
  .footer-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: baseline;
   flex-wrap: wrap;
   gap: 72px;
 }
 
 .footer-info {
   max-width: 264px;
+  margin-right: 120px;
+}
+.footer-socials-item {
 }
 
 .footer-navigation-logo-first-logo {
@@ -518,7 +521,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms ease;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
