--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
      color: #434455;
      background-color: #ffff;
  }
+ a {
+     text-decoration: none;
+ }
 
 
 
@@ -24,7 +27,7 @@ p {
 
  /* === HEADER === */
  .container {
-     max-width: 1440px;
+     max-width: 1158px;
      margin: 0 auto;
      padding: 0 15px;
      box-sizing: border-box;
@@ -85,6 +88,7 @@ p {
      color: #2e2f42;
      letter-spacing: 0.02em;
      line-height: 1.5;
+     display: block;
      padding: 24px 0;
      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
@@ -115,6 +119,7 @@ p {
 
  .header-address {
      display: flex;
+     font-style: normal;
  }
 
  .header-address-list {
@@ -173,7 +178,7 @@ p {
      letter-spacing: 0.02em;
      text-align: center;
      max-width: 496px;
-     height: 120px;
+     margin: 0 auto;
      margin-bottom: 48px;
 
  }
@@ -189,6 +194,7 @@ p {
      border-radius: 4px;
      min-width: 169px;
      height: 56px;
+     margin: 0 auto;
      display: block;
      border: none;
      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -345,7 +351,7 @@ p {
  }
 
  .team-photo {
-     margin-bottom: 32px;
+    
  }
 
 
@@ -383,7 +389,7 @@ p {
 }
 
 
-.image-wrapper:hover .portfolio-text {
+.portfolio-item:hover .portfolio-text {
   transform: translateY(0);
 }
 
@@ -465,10 +471,7 @@ p {
 
  .footer-wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: baseline;
-  flex-wrap: wrap;
-  gap: 72px;
 }
 
 .footer-info {
